--- a/src/front/global.css
+++ b/src/front/global.css
@@ -1,4 +1,5 @@
 body {
+  margin: 0;
   font-family: "Inter", "Noto Sans JP", sans-serif;
 }
 
